[project]
name = "professional-rewriter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]==0.157.0",
    "jupyterlab==4.4.5",
    "notebook==7.4.5",
    "python-dotenv>=1.1.1",
    "streamlit==1.48.0",
    "torch==2.8.0",
    "transformers==4.46.3",
]
